--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "sqlite3": "^5.1.6"
   },
   "devDependencies": {
+    "@react-native-community/cli": "^20.0.2",
     "@types/jest": "^29.5.8",
     "eslint": "^8.55.0",
     "eslint-config-standard": "^17.1.0",
